--- a/Html-Css/Exercicios/ex002/index.html
+++ b/Html-Css/Exercicios/ex002/index.html
@@ -4,17 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parágramos</title>
+    <title>Parágrafos</title>
 </head>
 <body>
-    <h1>Parágramos e quebras de linha</h1>
+    <h1>Parágrafos e quebras de linha</h1>
     <hr>
     <p>Você pode escrever qualquer
         coisa do jeito
         que você
         quiser,
         basta colocar 
-        entre as tags ps
+        entre as tags &lt;ps&gt;<!-- LT significa Less Than, GT significa greater than-->
     </p>
+    <p>Vamos adicionar alguns símbolos especiais:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &cent;
+        &pound;
+        &Delta;
+    </p>
+    <p>Vamos adicionar alguns emojis:
+        &#x1f596;
+        &#x1f913;
+    </p>
+    
 </body>
 </html>
