--- a/Html-Css/Exercicios/ex002/index.html
+++ b/Html-Css/Exercicios/ex002/index.html
@@ -14,7 +14,7 @@
         que você
         quiser,
         basta colocar 
-        entre as tags &lt;ps&gt;<!-- LT significa Less Than, GT significa greater than-->
+        entre as tags &lt;p&gt; e &lt;/p&gt;<!-- LT significa Less Than, GT significa greater than-->
     </p>
     <p>Vamos adicionar alguns símbolos especiais:
         &reg;
